# SIRF

./: .gitignore  CMakeLists.txt
cmake/: setup.py.cmake
examples/Python/MR/: rpe_cg_sense.py  rpe_recon.py
src/: CMakeLists.txt
src/xDynamicSimulation/: CMakeLists.txt
src/xDynamicSimulation/cDynamicSimulation/: CMakeLists.txt  auxiliary_input_output.cpp  contrastgenerator.cpp  dynamics.cpp  dynamicsimulation_x.cpp  dynsim_deformer.cpp  dynsim_noisegenerator.cpp  main.cpp  phantom_input.cpp
src/xDynamicSimulation/cDynamicSimulation/Testing/: all_simulation_tests.cpp  auxiliary_testing_functions.cpp  auxiliary_testing_functions.h  test_input_filenames.h  tests_auxiliary_input_output.cpp  tests_auxiliary_input_output.h  tests_auxiliary_testing_functions.cpp  tests_auxiliary_testing_functions.h  tests_contrastgenerator.cpp  tests_dynamicsimulation.cpp  tests_dynsim_deformer.cpp  tests_memory_usage.cpp  tests_noisegenerator.cpp
src/xDynamicSimulation/cDynamicSimulation/include/sirf/cDynamicSimulation/: auxiliary_input_output.h  contrastgenerator.h  dynamicsimulation_x.h  phantom_input.h
src/xGadgetron/: CMakeLists.txt
src/xGadgetron/cGadgetron/: CMakeLists.txt  cgadgetron.cpp  encoding.cpp  gadgetron_data_containers.cpp  gadgetron_data_containers.cpp.autosave  gadgetron_x.cpp
src/xGadgetron/cGadgetron/include/sirf/Gadgetron/: cgadgetron.h  encoding.h  gadget_lib.h  gadgetron_data_containers.h  gadgetron_image_wrap.h  gadgetron_x.h
src/xGadgetron/cGadgetron/include/sirf/cGadgetron/: gadgetron_data_containers.h
src/xGadgetron/cGadgetron/tests/: CMakeLists.txt  mrtest_auxiliary_funs.cpp  mrtest_auxiliary_funs.h  mrtests.cpp  mrtests.cpp.autosave
src/xGadgetron/pGadgetron/: Gadgetron.py
src/xGadgetron/pGadgetron/tests/: test1.py
src/xSTIR/cSTIR/: stir_data_containers.cpp
